# vivictpp

./: README.md  meson.build
.github/workflows/: macos-build-ffmpeg5.yml
.github/workflows/scripts/: xvfb-run
include/: Controller.hh  EventLoop.hh  Version.hh  VideoInputs.hh  VideoMetadata.hh  VivictPP.hh
include/gtk/: Application.hh  ApplicationWindow.hh
include/sdl/: SDLEventLoop.hh  SDLUtils.hh
include/ui/: ScreenOutput.hh
include/workers/: FrameBuffer.hh
src/: Controller.cc  VideoInputs.cc  VivictPP.cc  main.cc
src/gtk/: Application.cc  ApplicationWindow.cc
src/libav/: Filter.cc
src/sdl/: SDLEventLoop.cc  SDLUtils.cc
src/ui/: Container.cc  ScreenOutput.cc
src/workers/: DecoderWorker.cc  PacketWorker.cc
test/: PlaybackTest.cc
